* FIXED: Campaigns In, Campaigns Out, Agents, Callback Extensions, ECCP Users:
  modernize pagination to fix zeros under elastixneo theme.
* FIXED: Callback Extensions: remove access to variable that no longer exists
  from Agents implementation.
* FIXED: Dialer (ECCP): check that target extension for transfer is entirely
  numeric. Fixes Elastix bug #1553.

2.2.0-1 (SVN revision 4874)
* Agent Console: filter breaks to remove inactive breaks from list.
* Dialer: tag all incoming calls with no end timestamp as LostTrack on startup.
  This sanity check was lost on the multiple-process rewrite. May fix part of
  Elastix bug #1531.
* Incoming Campaign: fix assignment to incorrect template variable leading to
  visualization of New Campaign form when there are no incoming queues. Fixes
  Elastix bug #1533.
* Campaign Monitoring, Dialer (ECCP): extend the getcampaignstatus and 
  getincomingqueuestatus requests to report statistic values for the queried
  campaign or queue. Use these to implement display of average and maximum call 
  duration in Campaign Monitoring realtime display. 
* Agent Console: allow inactivity timeout to be configurable
* Dialer (ECCP): add support for inactivity timeout in web agent console.
* Agent Console: add minimal error handling to javascript ajax methods.
* Agent Console: display VtigerCRM button only if VtigerCRM is installed
* Dialer: add code to repair corrupted audit entries on dialer startup.
* Agent Console: modify connect function in order to return result of login
  command, and use this to check whether ECCP login succeeded. 
* Calls per Agent: make call type specification case-insensitive
* Dialer: Specify a proper CallerID string as 'Agent/XXXX Login' to prevent 
  the softphones from displaying confusing strings as the CallerID.
* Campaign Monitoring: in case of client state hash mismatch, only reload if
  the request hash is identical to the one stored by the web client.